[build-system]
requires = ["setuptools>=65", "wheel"]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "options-trader"
version = "0.2.0"
description = "Synthetic long strategy scanner"
readme = "README.md"
authors = [{name = "Abhinav Mangat"}]
requires-python = ">=3.9"
dependencies = [
  "yfinance>=0.2.36",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
full = [
  "yfinance>=0.2.36",
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/abmangat/Options"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"

version = "0.1.0"
description = "Automated synthetic long option strategy evaluator"
readme = "README.md"
authors = [{name = "Option Automation"}]
requires-python = ">=3.9"
dependencies = [
    "yfinance>=0.2.31",
]
requires-python = ">=3.10"

dependencies = ["yfinance>=0.2.31"]

[project.scripts]
options-trader = "options_trader.cli:main"

[project.optional-dependencies]
config = ["pyyaml>=6.0"]
full = ["pyyaml>=6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
